# migration-tool

./: .env.example  .gitignore  README.md  migration_validation_report.txt  normalization_validation_report.txt  pyproject.toml  requirements.txt  start_backend.py  test_backend.py  test_column_additions.py  test_schema_update.py
docs/: adding_new_columns.md  schema_definition_guide.md
frontend-lovable/: README.md  index.html  package-lock.json  package.json  start.sh  vite.config.ts
frontend-lovable/src/: App.tsx  index.css
frontend-lovable/src/components/: ConnectionDialog.tsx  DashboardLayout.tsx  MigrationPhaseOne.tsx  MigrationPhaseTwo.tsx  ProgressSection.tsx
frontend-lovable/src/contexts/: MigrationContext.tsx
frontend-lovable/src/hooks/: use-websocket.ts
reference/: ERD_CREATION_SQL.sql  ERD_ENROLLMENT_NORMALIZATION.mmd  ERD_ENROLLMENT_NORMALIZATION.sql  GUARDIAN_NORMALIZATION_DDL.sql  GUARDIAN_NORMALIZATION_MIGRATION.sql  V000__create_normalized_users_table.sql  V001__create_normalized_enrollment_tables.sql  V002__create_normalized_guardian_tables.sql  V003__create_normalized_academic_tables.sql  V005__create_normalized_parent_tables.sql  column_additions.sql  complete_normalized_schema 1.sql  migration_scripts.md
resources/: module_configuration.json  schema_definition.json  tables_to_migrate.txt  translations.json
src/: api.py  column_additions.py  config.py  env_config.py  main.py  main_config.py  migration_tracker.py  normalization.py  reporting.py  return_tables.py  schema_manager.py  tables_col.py  validation.py
tests/: test_validation.py
(+5 files in other folders)
